# psxgptinfrav3

./: .gitignore  CLAUDE.md  canonical_schema_fixed.json  pyproject.toml  resume_context.md  resume_context_cf.md  tickers100.json
docs/: AUTONOMOUS_QC_DESIGN.md  PIPELINE_DESIGN_V3.md  QC_HOOKS_DESIGN.md  QC_STRATEGY.md  QC_STRATEGY_V2.md
pipeline/: __init__.py
pipeline/market/: calculate_52week.py  fetch_psx_current_shares.py  populate_market_data.py  upload_market_data.py
pipeline/shared/: __init__.py  checkpoint.py  constants.py  incremental.py
pipeline/stage1_ingest/: Step1_DownloadPDFs.py  Step2_QCFilingCoverage.py  Step3_SplitPages.py  Step4_ConvertToJPG.py  Step5_UploadToR2.py  Step6_RunOCR.py  Step7_BuildSkipManifest.py  Step8_QCExtraction.py  Step9_BuildClassificationManifest.py  __init__.py
pipeline/stage2_review/: Step1_ClassifyPages.py  Step1b_DeterministicQC.py  Step2_BuildRepairManifest.py  Step3_RepairFix.py  Step4_RepairReOCR.py  Step5_FinalCorruptionCheck.py  Step6_BuildExtractionManifest.py
pipeline/stage3_extract/: Step10_ExtractCompensation.py  Step11_ExtractMultiYear.py  Step1_BuildManifests.py  Step2_ExtractStatementPages.py  Step3_ExtractPL.py  Step4_QCPL.py
pipeline/stage3_extract_statements/: Step1_BuildManifests.py  Step2_ExtractStatementPages.py  Step3_ExtractBS.py  Step3_ExtractCF.py  Step3_ExtractPL.py  Step4_QCBS.py  Step4_QCBS_Extraction.py  Step4_QCCF.py  Step4_QCCF_Extraction.py  Step4_QCPL_Extraction.py  Step5_JSONifyBS.py  (+10 more)
scripts/: run_all.sh  run_stage1.sh  run_stage2.sh  run_stage3.sh  run_stage4.sh  run_stage5.sh
(+33 files in other folders)
